--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,7 +2,36 @@
   height: 130px;
   width: 100%;
 }
-
 .descriptionBlock {
   padding: 10px;
+}
+.profile {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0px;
+  background-color: #ffffff3d;
+  margin: 10px;
+  border-radius: 20px;
+}
+.avatar {
+  border-radius: 20px;
+  max-width: 175px;
+  margin: 0 10px;
+}
+.info {
+  margin: 0 10px;
+}
+.avatar__name {
+  font-size: 20px;
+  font-weight: 600;
+  color: #251313;
+  text-transform: capitalize;
+  margin: 0 0 10px 0;
+}
+.status {
+  font-size: 12px;
+  font-style: italic;
+  font-weight: 400;
+  color: #696969;
+  margin: 0 0 10px 0;
 }
