--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
+  background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
+  border-bottom: 10px solid #c4c4c4;
 }
 .logo {
   width: 70px;
