--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -4,12 +4,12 @@
   flex-direction: column;
   align-items: left;
   justify-content: flex-start;
-  background-color: #c8c8c8cf;
-  height: 100vh;
+  background: linear-gradient(0.25turn, #f69d3c, #ebf8e1, #3f87a6);
+  height: auto;
   padding: 20px;
   box-sizing: border-box;
+  border-right: 10px solid #c4c4c4;
   border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 a {
   text-decoration: none;
