--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -5,6 +5,12 @@
 }
 .users {
   padding: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.btn {
+  cursor: pointer;
 }
 .user {
   display: flex;
@@ -13,6 +19,12 @@
   border-radius: 5px;
   padding: 10px;
   margin-bottom: 5px;
+  width: 90%;
+  border: 1px solid #fff;
+  transition: all 0.2s;
+}
+.user:hover {
+  box-shadow: 0px 0px 8px 2px #0761cf;
 }
 .user_info {
   display: flex;
@@ -41,7 +53,7 @@
 }
 .pages {
   display: flex;
-  margin: 5px 0;
+  margin: 15px 0;
 }
 .name {
   font-size: 20px;
