--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,44 +1,74 @@
 .dialogs {
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
+  max-height: calc(100vh - 110px);
 }
 
 .dialogsItems {
   padding: 10px;
-  flex-basis: 15%;
+  flex-basis: 20%;
+  max-height: 100%;
+  box-sizing: border-box;
 }
 .dialogsItems .active {
   color: gold;
 }
 
 .textarea {
+  width: 100%;
+  padding: 5px;
   resize: none;
   border-radius: 3px;
   margin-bottom: 5px;
+  box-sizing: border-box;
 }
 
 .messages {
-  padding: 10px;
-  background-color: #ffffff85;
   border-radius: 10px;
-  margin: 15px;
   flex-basis: 77%;
+  margin-bottom: 15px;
+  padding: 5px;
+  border-bottom: 1px solid #c4c4c4;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  overflow: auto;
 }
 
 .message {
-  padding: 5px;
+  padding: 6px;
+  background-color: rgb(255 255 255 / 32%);
+  margin: 5px 0;
+  border-radius: 25px;
+  transition: all 0.2s;
+  max-width: 100%;
+  overflow-y: auto;
 }
 
-.sendMessageBlock {
-  flex-basis: 62%;
-    display: flex;
-    flex-direction: column;
-    margin: auto;
+.message:hover {
+  background-color: #3f87a613;
+}
+
+.sendMessageForm {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .sendButton {
+  width: 170px;
   padding: 5px;
   border-radius: 5px;
   outline: none;
 }
 
+.messages_content {
+  flex-basis: 80%;
+  max-height: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  background-color: #ffffff9e;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+}
