--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -1,5 +1,4 @@
 .posts {
-
 }
 .posts textarea:hover {
   background-color: #f6f6f6;
@@ -21,7 +20,7 @@ h3 {
   width: 15%;
   height: 50%;
 }
-.newMessageBlock {
+.newMessageForm {
   height: 90px;
   padding: 10px;
   box-sizing: border-box;
@@ -29,4 +28,7 @@ h3 {
   flex-direction: column;
   align-items: flex-end;
   justify-content: space-between;
+}
+.header {
+  color: #fff;
 }
