--- a/src/index.css
+++ b/src/index.css
@@ -24,4 +24,6 @@ code {
   background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
   padding: 15px;
   box-sizing: border-box;
+  min-height: calc(100vh - 80px);
+  height: auto;
 }
