--- a/src/components/Profile/MyPosts/MyPosts.module.css
+++ b/src/components/Profile/MyPosts/MyPosts.module.css
@@ -10,15 +10,11 @@ h3 {
 
 .posts textarea {
   width: 100%;
-  height: 100%;
   border-radius: 3px;
   margin-bottom: 5px;
   transition: all 0.2s;
   resize: none;
-}
-.posts button {
-  width: 15%;
-  height: 50%;
+  position: relative;
 }
 .newMessageForm {
   height: 90px;
@@ -31,4 +27,8 @@ h3 {
 }
 .header {
   color: #fff;
+}
+
+.btn {
+  margin: 10px 0;
 }
