--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,8 +20,29 @@
     -2px -2px 0 #40b540, 2px 0px 0 #40b540, 0px 2px 0 #40b540,
     -2px 0px 0 #40b540, 0px -2px 0 #40b540;
 }
+.login_block {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .login_info {
   margin-right: 15px;
+}
+.logout_btn {
+  margin-right: 15px;
+  color: #ffffff;
+  background-color: transparent;
+  cursor: pointer;
+  outline-color: transparent;
+  outline: none;
+  border-radius: 5px;
+  transition: all 0.2s;
+}
+.logout_btn:hover {
+  letter-spacing: 1.1px;
+  background-color: #4074b5;
+  box-shadow: 0px 0px 15px 3px #FFFFFF;
+
 }
 .login_name {
   font-size: 18px;
