--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,14 +1,18 @@
 .post {
   color: rgb(73, 59, 27);
   border: 2px solid #dddddd;
-  margin: 5px 15px 5px 15px;
+  margin: 10px 15px 10px 15px;
   background-color: #ffffff9e;
   border-radius: 10px;
   padding: 5px;
+  transition: all 0.2s;
 }
 .post img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  border: 2px solid #FFFFFF;
+  border: 2px solid #ffffff;
+}
+.post:hover {
+  box-shadow: 0px 0px 8px 2px #0761cf;
 }
