--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -9,12 +9,9 @@
   flex-direction: column;
   align-items: center;
 }
-.btn {
-  cursor: pointer;
-}
 .user {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   background-color: #ffffff70;
   border-radius: 5px;
   padding: 10px;
@@ -28,7 +25,7 @@
 }
 .user_info {
   display: flex;
-  width: 100%;
+  width: 80%;
   justify-content: space-between;
 }
 .user_avaBlock {
