--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -33,10 +33,12 @@
   font-style: italic;
   font-weight: 400;
   color: #696969;
-  margin: 0 0 10px 0;
+  margin-top: 15px;
 }
 .status {
   cursor: pointer;
+  background-color: #ffffff59;
+  padding: 0 2px;
   transition: all 0.2s;
 }
 .status:hover {
