feat: deploy to gh-pages

--- a/src/components/common/Preloader/spin.css
+++ b/src/components/common/Preloader/spin.css
@@ -1,6 +1,7 @@
 .spin {
-  width: 100px;
-  position: absolute;
-  top: 50%;
+  width: 130px;
+  position: fixed;
   left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
