--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -8,38 +8,41 @@
 .profile {
   display: flex;
   flex-direction: row;
-  padding: 10px 0px;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding: 10px;
   background-color: #ffffff3d;
   margin: 10px;
   border-radius: 20px;
+  position: relative;
 }
 .avatar {
   border-radius: 20px;
-  max-width: 175px;
-  margin: 0 10px;
+  max-width: 100%;
 }
 .info {
-  margin: 0 10px;
+  margin-left: 20px;
 }
-.avatar__name {
+.full_name {
   font-size: 20px;
   font-weight: 600;
   color: #251313;
   text-transform: capitalize;
-  margin: 0 0 10px 0;
 }
-.about {
+.about_me {
   font-size: 12px;
   font-style: italic;
   font-weight: 400;
   color: #696969;
-  margin-top: 15px;
+  margin-bottom: 5px;
 }
 .status {
   cursor: pointer;
-  background-color: #ffffff59;
-  padding: 0 2px;
   transition: all 0.2s;
+  line-height: 13px;
+  font-size: 13px;
+  margin: 0;
+  padding: 0;
 }
 .status:hover {
   border-radius: 2px;
@@ -49,7 +52,55 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  width: 200px;
 }
 .upload_ava {
-  display: inline-block;
+  display: none;
+}
+.ava_uploader {
+  text-align: center;
+  background-color: #595959a3;
+  position: absolute;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  cursor: pointer;
+  opacity: 0;
+  width: 100%;
+  bottom: 4px;
+  transition: opacity 0.2s;
+}
+.ava_label {
+  font-weight: 600;
+  font-size: 15px;
+  color: #ffffff;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 30px;
+}
+.ava_block:hover .ava_uploader {
+  opacity: 1;
+}
+.contact_title {
+  margin-left: 10px;
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #5a86ab;
+}
+.contact_value {
+  font-size: 13px;
+}
+.ava_image {
+  position: relative;
+}
+.profile_data {
+  border-top: 1px solid #c4c4c4;
+  padding: 10px 0;
+  margin-top: 5px;
+}
+.activate_edit_btn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
 }
