--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -22,6 +22,7 @@
 }
 .info {
   margin-left: 20px;
+  flex-basis: 50%;
 }
 .full_name {
   font-size: 20px;
@@ -83,13 +84,17 @@
   opacity: 1;
 }
 .contact_title {
+  flex-basis: 30%;
   margin-left: 10px;
-  font-size: 16px;
-  text-transform: capitalize;
+  font-size: 14px;
   color: #5a86ab;
+  font-weight: 500;
 }
 .contact_value {
-  font-size: 13px;
+  font-size: 12px;
+  font-weight: 500;
+  flex-basis: 70%;
+  text-align: right;
 }
 .ava_image {
   position: relative;
@@ -103,4 +108,10 @@
   position: absolute;
   top: 15px;
   right: 15px;
+}
+.contact {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+  align-items: center;
 }
