--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -5,16 +5,16 @@
 .pagination_item {
   width: 20px;
   height: 20px;
-  margin: 0 5px;
   background-color: #ede5bf;
   border-radius: 50%;
   line-height: 17px;
   font-size: 13px;
   box-sizing: border-box;
   box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
-  padding-left: 6px;
+  margin: 0 4px;
   cursor: pointer;
   transition: all 0.2s;
+  text-align: center;
 }
 .pagination_item.selected {
   font-weight: bold;
@@ -25,4 +25,9 @@
 }
 .paginator_btn {
   border-radius: 10px;
+}
+.page_container {
+  display: flex;
+  align-self: center;
+  justify-content: center;
 }
