--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -14,19 +14,22 @@
 .dialogsItems .active {
   color: gold;
 }
-
 .textarea {
   width: 100%;
+  display: flex;
+}
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
   padding: 5px;
   resize: none;
-  border-radius: 3px;
-  margin-bottom: 5px;
-  box-sizing: border-box;
   background-color: #ffffff1c;
+  border-radius: 5px;
   transition: all 0.2s;
 }
-.textarea:focus,
-.textarea:hover {
+textarea:focus,
+textarea:hover {
   background-color: #ffffffd2;
 }
 
