--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,7 +1,7 @@
 .post {
   color: rgb(73, 59, 27);
   border: 2px solid #dddddd;
-  margin: 10px 15px 10px 15px;
+  margin: 10px 0;
   background-color: #ffffff9e;
   border-radius: 10px;
   padding: 5px;
