--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -7,14 +7,13 @@
 }
 .profile {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   border-radius: 20px;
   position: relative;
 }
 .avatar {
-  border-radius: 20px;
+  border-radius: 8px;
   max-width: 100%;
 }
 .info {
@@ -59,12 +58,12 @@
   text-align: center;
   background-color: #595959a3;
   position: absolute;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
   cursor: pointer;
   opacity: 0;
   width: 100%;
-  bottom: 4px;
+  bottom: 0;
   transition: opacity 0.2s;
 }
 .ava_label {
