--- a/src/components/common/FormControls/FormControls.module.css
+++ b/src/components/common/FormControls/FormControls.module.css
@@ -18,10 +18,11 @@
 }
 
 .formControl input {
+  width: 100%;
   padding: 8px;
   border-radius: 10px;
   font-size: 15px;
-  margin: 5px 0;
+  margin: 5px 0 0 0;
   outline: none;
   border: 1px solid #c4c4c4;
 }
