--- a/src/assets/styles/buttons.css
+++ b/src/assets/styles/buttons.css
@@ -6,10 +6,11 @@
   border-radius: 5px;
   transition: all 0.2s;
 }
+
 .btn:hover {
-  letter-spacing: 1.1px;
-  box-shadow: 0px 0px 15px 3px #ffffff;
+  transform: scale(1.1);
 }
+
 .btn:disabled {
   background-color: #c4c4c4;
   border-color: #fff;
