--- a/src/components/common/Preloader/spin.css
+++ b/src/components/common/Preloader/spin.css
@@ -1,6 +1,7 @@
 .spin {
-  position: fixed;
+  position: fixed !important;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  font-size: 28px !important;
 }
