--- a/src/components/common/Paginator/Paginator.module.css
+++ b/src/components/common/Paginator/Paginator.module.css
@@ -11,17 +11,18 @@
   font-size: 13px;
   box-sizing: border-box;
   box-shadow: 0px 0px 1px 1px rgba(255, 255, 255, 1);
-  margin: 0 4px;
+  margin: 0 7px;
   cursor: pointer;
   transition: all 0.2s;
   text-align: center;
 }
 .pagination_item.selected {
   font-weight: bold;
-  background-color: #c0c0c0;
+  background-color: #e6e6e6;
 }
 .pagination_item:hover {
-  box-shadow: 0px 0px 8px 2px #0761cf;
+  box-shadow: 0px 0px 5px -1px #0761cf;
+  transform: scale(1.1);
 }
 .paginator_btn {
   border-radius: 10px;
