--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -1,8 +1,14 @@
 .dialogs {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
+  min-height: calc(100vh - 110px);
   max-height: calc(100vh - 110px);
+}
+.enterMessage {
+  border: 1px solid #c4c4c4;
+}
+.enterMessage:focus {
+  outline-color: slategray;
 }
 
 .dialogsItems {
@@ -35,22 +41,22 @@ textarea:hover {
 
 .messages {
   border-radius: 10px;
-  flex-basis: 77%;
+  flex: 1;
   margin-bottom: 15px;
   padding: 5px;
-  border-bottom: 1px solid #c4c4c4;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
   overflow: auto;
 }
 
 .message {
-  padding: 6px;
-  background-color: rgb(255 255 255 / 32%);
+  padding: 10px 20px;
+  background-color: #b1b1b11a;
   margin: 5px 0;
   border-radius: 25px;
   transition: all 0.2s;
-  max-width: 100%;
+  max-width: 80%;
+  width: fit-content;
   overflow-y: auto;
 }
 
@@ -80,4 +86,5 @@ textarea:hover {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
