--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -11,7 +11,9 @@
   padding-right: 10px;
 }
 .logo {
-  width: 70px;
+  width: 55px;
+  border: 2px solid #fff;
+  border-radius: 50%;
 }
 .login {
   margin-right: 15px;
