--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -11,6 +11,7 @@
   align-items: flex-start;
   border-radius: 20px;
   position: relative;
+  margin-bottom: 45px;
 }
 .avatar {
   border-radius: 50%;
@@ -18,7 +19,6 @@
 }
 .info {
   flex-basis: 50%;
-  margin-right: 45px;
 }
 .full_name {
   font-size: 24px;
@@ -49,6 +49,8 @@
   flex-direction: column;
   justify-content: center;
   width: 200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .upload_ava {
   display: none;
